--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,9 @@ Bindings for the [wordnik](https://www.wordnik.com/) api.
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+reqwest = { version = "0.11.4", features = ["blocking", "json"] }
+serde = { version = "1.0.130", features = ["derive"] }
+serde_json = "1.0.67"
+
+[dev-dependencies]
+dotenv = "0.15.0"
