--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wordnik"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2018"
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/archer884/wordnik"
@@ -8,6 +8,7 @@ repository = "https://github.com/archer884/wordnik"
 description = """
 Bindings for the [wordnik](https://www.wordnik.com/) api.
 """
+exclude = ["/resource"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
